NEWS for the R Package Luminescence

Changes in version 0.5.1 (, 2016):

  Bugfixes and changes:

         • ‘Dummy()’

             • Dummy
