@@ -774,9 +774,9 @@
 </td>
 <td class=cellinside>0.2.1
 </td>
-<td class=cellinside>2015-11-29
+<td class=cellinside>2015-12-04
 </td>
-<td class=cellinside>17:27:48
+<td class=cellinside>11:12:15
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
@@ -1227,9 +1227,9 @@
 </td>
 <td class=cellinside>0.2.9
 </td>
-<td class=cellinside>2015-12-03
+<td class=cellinside>2015-12-04
 </td>
-<td class=cellinside>16:11:40
+<td class=cellinside>10:54:16
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
