@@ -1,5 +1,5 @@
 % latex table generated in R 3.3.0 by xtable 1.8-0 package
-% Fri Dec  4 08:27:58 2015
+% Fri Dec  4 11:14:59 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -71,7 +71,7 @@
   36 & ExampleData.RLum.Analysis & Example data as  RLum.Analysis  objects & $<$br /$>$ Collection of different  RLum.Analysis  objects for$<$br /$>$ protocol analysis.$<$br /$>$ &  &  &  &  \\ 
   37 & ExampleData.RLum.Data.Image & Example data as  RLum.Data.Image  objects & $<$br /$>$ Measurement of Princton Instruments camera imported with the function$<$br /$>$ read\_SPE2R  to R to produce an$<$br /$>$ RLum.Data.Image  object.$<$br /$>$ &  &  &  &  \\ 
   38 & ExampleData.XSYG & Example data for a SAR OSL measurement and a TL spectrum using a lexsyg$<$br /$>$ reader & $<$br /$>$ Example data from a SAR OSL measurement and a TL spectrum for package$<$br /$>$ Luminescence imported from a Freiberg Instruments XSYG file using the$<$br /$>$ function  read\_XSYG2R .$<$br /$>$ &  &  &  &  \\ 
-  39 & extract\_IrradiationTimes & Extract irradiation times from an XSYG file & $<$br /$>$ Extracts irradiation times, dose and times since last irradiation, from a$<$br /$>$ Freiberg Instruments XSYG-file. These information can be further used to$<$br /$>$ update an existing BINX-file$<$br /$>$ & 0.2.1 & 2015-11-29 & 17:27:48
+  39 & extract\_IrradiationTimes & Extract irradiation times from an XSYG file & $<$br /$>$ Extracts irradiation times, dose and times since last irradiation, from a$<$br /$>$ Freiberg Instruments XSYG-file. These information can be further used to$<$br /$>$ update an existing BINX-file$<$br /$>$ & 0.2.1 & 2015-12-04 & 11:12:15
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   40 & fit\_CWCurve & Nonlinear Least Squares Fit for CW-OSL curves [beta version] & $<$br /$>$ The function determines the weighted least-squares estimates of the$<$br /$>$ component parameters of a CW-OSL signal for a given maximum number of$<$br /$>$ components and returns various component parameters. The fitting procedure$<$br /$>$ uses the  nls  function with the  port  algorithm.$<$br /$>$ & 0.5.1 & 2015-11-29 & 17:27:48
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
@@ -116,7 +116,7 @@
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany),  Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  Based on a rewritten$<$br /$>$ S script of Rex Galbraith, 2010$<$br /$>$  R Luminescence Package Team \\ 
   62 & plot\_Risoe.BINfileData & Plot single luminescence curves from a BIN file object & $<$br /$>$ Plots single luminescence curves from an object returned by the$<$br /$>$ read\_BIN2R  function.$<$br /$>$ & 0.4.1 & 2015-11-29 & 17:27:48
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France),  Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
-  63 & plot\_RLum.Analysis & Plot function for an RLum.Analysis S4 class object & $<$br /$>$ The function provides a standardised plot output for curve data of an$<$br /$>$ RLum.Analysis S4 class object$<$br /$>$ & 0.2.9 & 2015-12-03 & 16:11:40
+  63 & plot\_RLum.Analysis & Plot function for an RLum.Analysis S4 class object & $<$br /$>$ The function provides a standardised plot output for curve data of an$<$br /$>$ RLum.Analysis S4 class object$<$br /$>$ & 0.2.9 & 2015-12-04 & 10:54:16
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   64 & plot\_RLum.Data.Curve & Plot function for an RLum.Data.Curve S4 class object & $<$br /$>$ The function provides a standardised plot output for curve data of an$<$br /$>$ RLum.Data.Curve S4 class object$<$br /$>$ & 0.1.6 & 2015-11-29 & 17:27:48
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
