@@ -77,7 +77,7 @@ Only plotting of \code{RLum.Data.Curve} and \code{RLum.Data.Spectrum}
 objects are currently supported.
 }
 \section{Function version}{
- 0.2.9 (2015-12-03 16:11:40)
+ 0.2.9 (2015-12-04 10:54:16)
 }
 \examples{
 
